kubernetes/base/synclounge/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synclounge
  labels:
    project: synclounge
    component: synclounge
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    project: synclounge
    component: synclounge
