kubernetes/base/synclounge/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synclounge
  labels:
    project: synclounge
    component: synclounge
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: synclounge.media.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synclounge
            port:
              number: 80
  tls:
    - hosts:
        - synclounge.media.k8s.funkyboy.zone
      secretName: synclounge-ingress-cert
